Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17807

Regression, Renaming a ".lnk-file with dots" makes smartass-renaming choke

    XMLWordPrintable

Details

    Description

      A continuation of CORE-17793
      And a regression of CORE-15242, introduced by 0.4.14-dev-1116-g4df9355

      The folders do work fine now, but the smartass-heuristic does still fail for lnk files.

      Reproduction steps

      • Create a file called C:\mbr.old.lnk
      • understand, that ros by default does never show the lnk extension in explorer filebrowser, so it will show this file with the link-icon-overlay, but will only display its name as C:\mbr.old
      • now press F2 on that file

      Expected result
      "mbr.old" should be preselected for the editing

      Observed result
      only "mbr" is preselected for editing erroneously
      0.4.14-RC-103-g79cb118_affected.webm
      0.4.14-RC-103-g79cb118_affected.log (shows nothing interesting)

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              reactosfanboy reactosfanboy
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: