[0.4.14][SHELL32] Don't smartass-renaming on LNK files (#4020) CORE-17807

Renaming .LNK files had a bug that the selection won't include the extension-like filename part.

That regressed by
0.4.14-dev-1116-g 4df9355d0c2657062b0357829d90b79474c1a26c

fix picked from 0.4.15-dev-3261-g 9078e34f3cb3718b481de0e15d05b1f633efc9e9