dll/win32/shell32/shfldr.h
@@ -92,7 +92,7 @@ static __inline int SHELL32_GUIDToStringW (REFGUID guid, LPWSTR str)
 }
 
 void SHELL_FS_ProcessDisplayFilename(LPWSTR szPath, DWORD dwFlags);
-BOOL SHELL_FS_HideExtension(LPWSTR pwszPath);
+BOOL SHELL_FS_HideExtension(LPCWSTR pwszPath);
 
 void AddClassKeyToArray(const WCHAR * szClass, HKEY* array, UINT* cKeys);
 
